--- a/packages/default/scss/forms/_layout.scss
+++ b/packages/default/scss/forms/_layout.scss
@@ -334,7 +334,7 @@
     // Action buttons
     .k-popup-edit-form > .k-actions,
     .k-edit-form-container .k-actions {
-        margin: $spacer (-$window-inner-padding-x) (-$window-inner-padding-y);
+        margin: $spacer (-$kendo-window-inner-padding-x) (-$kendo-window-inner-padding-y);
     }
 
 
