--- a/packages/material/scss/pdf-viewer/_variables.scss
+++ b/packages/material/scss/pdf-viewer/_variables.scss
@@ -29,7 +29,7 @@ $pdf-viewer-search-panel-border-radius: k-map-get( $spacing, 1 ) !default;
 $pdf-viewer-search-panel-bg: $component-bg !default;
 $pdf-viewer-search-panel-text: $component-text !default;
 $pdf-viewer-search-panel-border: $component-border !default;
-$pdf-viewer-search-panel-shadow: $window-shadow !default;
+$pdf-viewer-search-panel-shadow: $kendo-window-shadow !default;
 $pdf-viewer-search-panel-matches-spacing: $padding-x-sm !default;
 
 $pdf-viewer-search-dialog-padding-x: $kendo-toolbar-padding-x-md !default;
