chore(dialog): prefix dialog variables with $kendo-
BREAKING CHANGE: Added kendo prefix to all dialog variables:

Change variable names from `$dialog-*` to `$kendo-dialog-*`.

--- a/packages/default/scss/dialog/_layout.scss
+++ b/packages/default/scss/dialog/_layout.scss
@@ -53,15 +53,15 @@
     // Buttons
     .k-dialog-buttongroup {
         @include border-bottom-radius( $kendo-window-border-radius );
-        padding: $dialog-buttongroup-padding-y $dialog-buttongroup-padding-x;
-        border-width: $dialog-buttongroup-border-width 0 0;
+        padding: $kendo-dialog-buttongroup-padding-y $kendo-dialog-buttongroup-padding-x;
+        border-width: $kendo-dialog-buttongroup-border-width 0 0;
         border-style: solid;
         border-color: inherit;
         flex: 0 0 auto;
         display: flex;
         flex-flow: row wrap;
         align-items: center;
-        gap: $dialog-button-spacing;
+        gap: $kendo-dialog-button-spacing;
         overflow: hidden;
     }
 
