feat(dialog): update styles to match updated rendering
BREAKING CHANGE: The following classes are being renamed:

* `k-dialog-actions` renamed to `k-dialog-titlebar-actions`

* `k-dialog-buttongroup` and `k-dialog-buttons` renamed to `k-dialog-actions`

BREAKING CHANGE: By default, the color of the titlebar is now the base color
and can be changed via the new themeColor property of the component

--- a/packages/bootstrap/scss/dialog/_theme.scss
+++ b/packages/bootstrap/scss/dialog/_theme.scss
@@ -12,7 +12,7 @@
     }
 
     // Buttons
-    .k-dialog-buttongroup {
+    .k-dialog-actions {
         border-color: $kendo-window-titlebar-border;
     }
 
