--- a/packages/default/scss/dialog/_layout.scss
+++ b/packages/default/scss/dialog/_layout.scss
@@ -42,7 +42,7 @@
 
 
     // Actions
-    .k-dialog-actions {}
+    .k-dialog-titlebar-actions {}
     .k-dialog-action {}
 
 
@@ -51,7 +51,7 @@
 
 
     // Buttons
-    .k-dialog-buttongroup {
+    .k-dialog-actions {
         @include border-bottom-radius( $kendo-window-border-radius );
         padding: $kendo-dialog-buttongroup-padding-y $kendo-dialog-buttongroup-padding-x;
         border-width: $kendo-dialog-buttongroup-border-width 0 0;
