--- a/packages/fluent/scss/scheduler/_theme.scss
+++ b/packages/fluent/scss/scheduler/_theme.scss
@@ -153,7 +153,7 @@
 
     // Edit dialog
     .k-scheduler-edit-dialog {
-        .k-dialog-buttongroup {
+        .k-dialog-actions {
             border-color: var( --kendo-scheduler-border, #{$kendo-scheduler-border} );
         }
     }
