--- a/packages/fluent/scss/input/_layout.scss
+++ b/packages/fluent/scss/input/_layout.scss
@@ -175,9 +175,16 @@
 
     // Input multiple values
     .k-input-values {
+        min-width: 0px;
         width: 100%;
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
         gap: calc( var( --INTERNAL--kendo-input-padding-y, 0 ) / 2 );
         cursor: text;
+    }
+    .k-input-values .k-chip-list {
+        display: contents;
     }
 
 
