--- a/packages/bootstrap/scss/treelist/_index.scss
+++ b/packages/bootstrap/scss/treelist/_index.scss
@@ -3,6 +3,7 @@
 
 // Dependencies
 @import "../common/_index.scss";
+@import "../utils/_text.scss";
 @import "../grid/_index.scss";
 @import "../icons/_index.scss";
 
